--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy~=1.16
-scikit-image~=0.16
-scikit-learn~=0.21
-scipy~=1.3
+numpy
+scikit-image
+scikit-learn
+scipy
 
-cvargparse~=0.1
+cvargparse
